ingress/ingress-controller/Bare-metal/securing-apps/ingress-nginx-controller-resource-rules-01.yaml
#apiVersion: networking.k8s.io/v1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx-resource-01
  namespace: ingress-nginx
spec:
  tls:
  - hosts:
    - nginx.example.com
    secretName: nginx-example-com-secret-tls
  rules:
  - host: nginx.example.com
# Define here a host base routing
# any request to access nginx.example.com
# will be routed to the service: main-nginx-deploy-01-nginx
# below.
    http:
      paths:
        - backend:
            serviceName: main-deployment-01-nginx
            servicePort: 80 
# This port 80 is the one we used during 
# the kubectl expose command
